Update SSL naming to use TLS to avoid deprecation confusion

--- a/main/Dockerfile
+++ b/main/Dockerfile
@@ -3,7 +3,7 @@ FROM registry1.dso.mil/ironbank/opensource/python/python38:latest
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt --no-warn-script-location
 
 COPY . /app
 
@@ -11,8 +11,8 @@ ENV PORT=8080
 
 USER root
 
-RUN python -m pip install pyOpenSSL && \
-    python ssl_generator.py && \
+RUN python -m pip install pyOpenSSL --no-warn-script-location && \
+    python tls_generator.py && \
     python -m pip uninstall -y pyOpenSSL 
 
 USER python3
